<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demyati.seddik.followerscounter.MainActivity">


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/InstructionsCall"
        android:textAlignment="center"
        android:textSize="15sp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/Welcome" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/Instructions" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:scrollbars="vertical|horizontal"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/login_button" />

    <Button
        android:id="@+id/Refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:onClick="Refresh"
        android:text="@string/Manual"
        android:textSize="13sp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/Result" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/Refresh">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/Automatic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="50"
                android:checked="true"
                android:onClick="Automatic"
                android:text="ToggleButton"
                android:textOff="@string/AutomaticOn"
                android:textOn="@string/AutomaticOff"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:weightSum="100"
            android:orientation="vertical">

            <TextView
                android:id="@+id/every"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/every"
                android:textAlignment="center"
                android:textSize="13sp" />

            <Spinner
                android:id="@+id/TimeInterval"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="AddNewMission"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="1.0"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/linearLayout1"
        ads:layout_constraintVertical_bias="1.0"
        ads:srcCompat="@mipmap/add_fab"
        app:elevation="0dp"
        app:fabSize="auto"
        app:pressedTranslationZ="0dp"
        app:useCompatPadding="true" />

</android.support.constraint.ConstraintLayout>